--- a/Resources/CSS/ciudad.css
+++ b/Resources/CSS/ciudad.css
@@ -12,23 +12,41 @@ h1, h2, h3
     font-family: beyond_the_mountainsregular;
 }
 
+table.header
+{
+    margin-left:auto; 
+    margin-right:auto;
+}
+
+div
+{
+    display:inline-block;
+}
+
 img.Ibra
 {
-    max-width:10%;
-    height:auto;
+    height:40%;
     padding-right: 80px;
+    display:inline;
 }
 
 nav.head
 {
-    align-content: center;
     text-align:center;
     padding-right: 30px;
+    display: inline;
+    
 }
 
-a
+li
+{
+    display:inline;
+}
+
+nav a
 {
     text-decoration: none;
+    display:inline-block;
     padding-right: 20px;
 }
 
@@ -36,3 +54,8 @@ a.current
 {
    color: red;
 }
+
+
+
+
+
