--- a/Resources/CSS/ciudad.css
+++ b/Resources/CSS/ciudad.css
@@ -12,6 +12,11 @@ h1, h2, h3
     font-family: beyond_the_mountainsregular;
 }
 
+header
+{
+    background: rgba(0, 0, 0, 0.5);
+}
+
 table.header
 {
     margin-left:auto; 
@@ -48,6 +53,7 @@ nav a
     text-decoration: none;
     display:inline-block;
     padding-right: 20px;
+    color:white;
 }
 
 a.current
