--- a/Resources/CSS/ciudad.css
+++ b/Resources/CSS/ciudad.css
@@ -4,7 +4,6 @@ body
     font-size: 15px;
     font-weight: 400;
     line-height: 1.667;
-    
 }
 
 h1, h2, h3
@@ -12,9 +11,32 @@ h1, h2, h3
     font-family: beyond_the_mountainsregular;
 }
 
+body
+{
+    margin-top:0; 
+    margin-bottom:0;
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+    height: 100%;
+
+}
+
+div.HeaderDiv
+{
+    background-image: url("../Images/hamburguesa2.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-left:auto; 
+    margin-right:auto;
+    width: 100%;
+    height: 100%;
+    padding-bottom: 600px;
+}
+
 header
 {
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.55);
 }
 
 table.header
