--- a/Resources/CSS/ciudad.css
+++ b/Resources/CSS/ciudad.css
@@ -13,6 +13,11 @@ h1, h2, h3
 
 body
 {
+    font-family: Open Sans;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 1.667;
+
     margin-top:0; 
     margin-bottom:0;
     margin-left: 0;
@@ -55,6 +60,22 @@ img.Ibra
     height:40%;
     padding-right: 80px;
     display:inline;
+}
+
+div.Image
+{
+    width: 100%;
+    height: 50px;
+    background-image: url("../Images/triangle_bg_black.png");
+    background-size: 25px 10px;
+    background-repeat: repeat-x;
+    opacity: 0.55;
+}
+
+img.TopTriangle
+{
+    display:inline;
+    background-repeat: repeat-x;
 }
 
 nav.head
