--- a/Resources/CSS/ciudad.css
+++ b/Resources/CSS/ciudad.css
@@ -1,11 +1,19 @@
 @font-face {
-    font-family: myFirstFont;
-    src: local(beyond_the_mountains.woff);
- }
+    font-family: 'Beyond The Mountains';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Beyond The Mountains'), url('beyond_the_mountains.woff') format('woff');
+}
+@font-face {
+    font-family: 'Beyond The Mountains';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Beyond The Mountains'), url('beyond_the_mountains.woff') format('woff');
+}
 
 h1, h2, h3
 {
-    font-family: "font-family: 'Beyond The Mountains'";
+    font-family: 'Beyond The Mountains';
 }
 
 body
