--- a/Resources/CSS/index.css
+++ b/Resources/CSS/index.css
@@ -1,11 +1,24 @@
 @font-face {
-    font-family: myFirstFont;
-    src: local(beyond_the_mountains.woff);
- }
+    font-family: 'Beyond The Mountains';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Beyond The Mountains'), url('beyond_the_mountains.woff') format('woff');
+}
+@font-face {
+    font-family: 'Beyond The Mountains';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Beyond The Mountains'), url('beyond_the_mountains.woff') format('woff');
+}
 
-h1, h2, h3
+h1
 {
-    font-family: "font-family: 'Beyond The Mountains'";
+    font-family: 'Beyond The Mountains';
+    color: white;
+    font-size: 100px;
+    text-align: center;
+    padding-top: 100px;
+    letter-spacing: 2px;
 }
 
 body
@@ -34,6 +47,7 @@ div.HeaderDiv
     width: 100%;
     background-position: 0 -150px; 
     padding-bottom: 538px;
+    opacity: 0.80;
 }
 
 header
