--- a/Resources/CSS/index.css
+++ b/Resources/CSS/index.css
@@ -22,6 +22,17 @@ h1
     margin-bottom: 20px;
 }
 
+h2
+{
+    font-family: 'Beyond The Mountains';
+    color: white;
+    font-size: 50px;
+    text-align: center;
+    font-weight: 10;
+    margin-top: 0px;
+    margin-bottom: 20px;
+}
+
 p.top
 {
     color: white;
@@ -105,6 +116,15 @@ img.Ibra
     height:40%;
     padding-right: 80px;
     display:inline;
+}
+
+img.TinyBurger
+{
+    padding-top: 75px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 2%;
 }
 
 div.TopTriangle
