--- a/Resources/CSS/index.css
+++ b/Resources/CSS/index.css
@@ -33,6 +33,11 @@ h2
     margin-bottom: 20px;
 }
 
+h2.MostSold
+{
+    padding-bottom: 50px;
+}
+
 p.top
 {
     color: white;
@@ -40,7 +45,8 @@ p.top
     font-weight: bold;
 }
 
-.menu_button {
+.menu_button
+{
     background-color: #4CAF50;
     border: none;
     color: white;
@@ -52,11 +58,48 @@ p.top
     margin: 4px 2px;
     cursor: pointer;
     text-align: center;
-    background-color: red;
+    background-color: #EF0031;
     border-width: 0px 0px 2px 0px;
     border-style: solid;
-    border-bottom-color: white;
-  }
+    border-bottom-color: #fff;
+}
+
+.menu_button_lower
+{
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    text-align: center;
+    background-color: #EF0031;
+    border-width: 0px 0px 2px 0px;
+    border-style: solid;
+    border-bottom-color: #fff;
+}
+
+.menu_button_best
+{
+    text-align: center;
+    text-decoration: none;
+    background-color: Transparent;
+    border-style: solid;
+    border-color: red;
+    border-width: thin;
+    color: red;
+    padding: 8px 20px;
+    transition-duration: 0.2s;
+}
+
+.menu_button_best2:hover
+{
+    background-color: #e7e7e7;
+}
 
 body
 {
@@ -105,12 +148,14 @@ div.buttondiv
 
 div.MostSold
 {
-    background-position: 0 0px;
+    background-position: 0px 0px;
     min-height: 100vh;
     width: 100%; 
     background-repeat: no-repeat;
-    background-size: 1550px 1000px; 
+    background-size: 2000px 1000px; 
     background-image: repeating-linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8) ), url("../Images/hamburguesa1.jpg");
+    color: white;
+    text-align: center;
 }
 
 header
@@ -135,10 +180,22 @@ table.menubutton
     margin-right:auto;
 }
 
+table.MostSold
+{
+    margin-left:auto; 
+    margin-right:auto;
+}
+
 img.Ibra
 {
     height:40%;
     padding-right: 80px;
+    display:inline;
+}
+
+img.Burgers
+{
+    height:25%;
     display:inline;
 }
 
@@ -186,6 +243,21 @@ div.BottomTriangle
     left: -10px;
     overflow: hidden;    
 }
+
+div.BottomTriangle2
+{
+    transform: rotate(180deg);
+    width: 100%;
+    height: 50px;
+    background-image: url("../Images/triangle_bg_black.png");
+    background-size: 25px 10px;
+    background-repeat: repeat-x;
+    position: relative;
+    top: 6px;
+    left: -10px;
+    overflow: hidden;    
+}
+
 nav.head
 {
     text-align:center;
@@ -214,4 +286,31 @@ nav a
 a.current
 {
    color: red;
+}
+
+td.MostSold
+{
+    padding-right: 70px;
+    padding-bottom: 40px;
+}
+
+td.MostSold2
+{
+    padding-bottom: 40px;
+}
+
+p.Name
+{
+    margin: 0px;
+    text-align: center;
+    color: white;
+}
+
+p.Price
+{
+    margin: 0px;
+    font-size: 25px;
+    text-align: center;
+    color: white;
+    padding-bottom: 10px;
 }
