--- a/Resources/CSS/index.css
+++ b/Resources/CSS/index.css
@@ -101,6 +101,44 @@ p.top
     background-color: #e7e7e7;
 }
 
+/* Style the tab */
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+  }
+  
+  /* Style the buttons inside the tab */
+  .tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+  }
+  
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    background-color: #ddd;
+  }
+
+.tabcontent
+{
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
+
+/* Create an active/current tablink class */
+.tab button.active 
+{
+    background-color: #ccc;
+}
+
 body
 {
     font-family: "Open Sans";
@@ -156,6 +194,15 @@ div.MostSold
     background-image: repeating-linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8) ), url("../Images/hamburguesa1.jpg");
     color: white;
     text-align: center;
+}
+
+div.Menu
+{
+    background-color: black;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: 100%;
 }
 
 header
