--- a/Resources/CSS/index.css
+++ b/Resources/CSS/index.css
@@ -101,11 +101,33 @@ p.top
     background-color: #e7e7e7;
 }
 
+.menu_button_tab
+{
+    background-color: black;
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+    border-width: 0px 0px 2px 0px;
+    border-style: solid;
+    border-bottom-color: red;
+    padding-left: 150px;
+    padding-right: 150px;
+}
+
 /* Style the tab */
-.tab {
+div.tab {
     overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
+    background-color:black;
+    height: 100%;
+    width:100%;
+    margin-left:auto; 
+    margin-right:auto;
+    text-align:center;
   }
   
   /* Style the buttons inside the tab */
@@ -118,12 +140,10 @@ p.top
     padding: 14px 16px;
     transition: 0.3s;
     font-size: 17px;
+    background-color: black;
+    color: white; 
   }
-  
-  /* Change background color of buttons on hover */
-  .tab button:hover {
-    background-color: #ddd;
-  }
+
 
 .tabcontent
 {
@@ -136,8 +156,14 @@ p.top
 /* Create an active/current tablink class */
 .tab button.active 
 {
-    background-color: #ccc;
+    background-color: red;
 }
+
+  
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    background-color:red;
+  }
 
 body
 {
@@ -344,6 +370,11 @@ td.MostSold
 td.MostSold2
 {
     padding-bottom: 40px;
+}
+
+td.tab
+{
+    padding-bottom: 0;
 }
 
 p.Name
