--- a/Resources/CSS/index.css
+++ b/Resources/CSS/index.css
@@ -92,7 +92,7 @@ p.top
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 10px;
+    font-size: 14px;
     margin: 4px 2px;
     cursor: pointer;
     text-align: center;
@@ -221,8 +221,18 @@ div.HeaderDiv
     min-height: 100vh;
     width: 100%; 
     background-repeat: no-repeat;
-    background-size: 1550px 1000px; 
+    background-size: 1550px 1050px; 
     background-image: repeating-linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url("../Images/hamburguesa2.jpg");
+}
+
+div.Footer
+{
+    background-position: 0px 0px;
+    min-height: 100vh;
+    width: 100%; 
+    background-size: 1550px 800px; 
+    background-repeat: no-repeat;
+    background-image: repeating-linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url("../Images/hamburguesa3.jpg");
 }
 
 div.buttondiv
@@ -281,10 +291,23 @@ table.MostSold
     margin-right:auto;
 }
 
+table.Footer
+{
+    margin-left:auto; 
+    margin-right:auto;
+    text-align: center;
+}
+
 img.Ibra
 {
     height:40%;
     padding-right: 80px;
+    display:inline;
+}
+
+img.Ibra2
+{
+    height:40%;
     display:inline;
 }
 
@@ -329,6 +352,15 @@ div.TopTriangle
     background-size: 25px 10px;
     background-repeat: repeat-x;
     opacity: 0.55;
+}
+
+div.TopTriangle2
+{
+    width: 100%;
+    height: 50px;
+    background-image: url("../Images/triangle_bg_black.png");
+    background-size: 25px 10px;
+    background-repeat: repeat-x;
 }
 
 div.BottomTriangle
@@ -457,4 +489,15 @@ p.RedPrice
     color: red;
     display:inline;
     vertical-align: text-top;
+}
+
+p.Green
+{
+    color:rgb(53, 201, 53);
+    text-decoration: underline;
+}
+
+p.White
+{
+    color:white;
 }
