--- a/Resources/CSS/Contact.css
+++ b/Resources/CSS/Contact.css
@@ -60,7 +60,7 @@ h1
 {
     font-family: 'Beyond The Mountains';
     color: white;
-    font-size: 100px;
+    font-size: 50px;
     text-align: center;
     font-weight: 10;
     margin-top: 0px;
@@ -69,12 +69,12 @@ h1
 
 div.HeaderDiv
 {
-    background-position: 0 -150px;
+    background-position: 0 -310px;
     min-height: 100vh;
     width: 100%; 
     background-repeat: no-repeat;
     background-size: 1550px 1050px; 
-    background-image: repeating-linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url("../Images/hamburguesa2.jpg");
+    background-image: repeating-linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url("../Images/hamburguesa7.jpg");
 }
 
 div.TopTriangle
@@ -96,9 +96,30 @@ div.BottomTriangle
     background-size: 25px 10px;
     background-repeat: repeat-x;
     position: relative;
-    top: 200px;
+    top: 7px;
     left: -10px;
-    overflow: hidden;    
+    overflow: hidden;  
+    padding-top: 60px;  
+}
+
+div.Contact
+{
+    background-color: black;
+    color: white;
+    background-position: 0 -600px;
+    padding-bottom: 100px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+img.TinyBurger
+{
+    padding-top: 75px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 3%;
 }
 
 table.header
@@ -150,6 +171,23 @@ p.top
     color: white;
     text-align: center;
     font-weight: bold;
+}
+
+p.WhiteBig
+{
+    color:white;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 17px;
+}
+
+p.White
+{
+    color:white;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 a.current
