--- a/Resources/CSS/Contact.css
+++ b/Resources/CSS/Contact.css
@@ -17,7 +17,7 @@
     background-color: #4CAF50;
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 15px 28px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -29,6 +29,7 @@
     border-width: 0px 0px 2px 0px;
     border-style: solid;
     border-bottom-color: #fff;
+    font-family: Open Sans;
 }
 
 body
@@ -87,6 +88,15 @@ div.TopTriangle
     opacity: 0.55;
 }
 
+div.TopTriangle2
+{
+    width: 100%;
+    height: 50px;
+    background-image: url("../Images/triangle_bg_black.png");
+    background-size: 25px 10px;
+    background-repeat: repeat-x;
+}
+
 div.BottomTriangle
 {
     transform: rotate(180deg);
@@ -111,6 +121,17 @@ div.Contact
     width: 100%;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
+}
+
+div.Footer
+{
+    background-position: 0px 0px;
+    min-height: 100vh;
+    width: 100%; 
+    background-size: 1550px 800px; 
+    background-repeat: no-repeat;
+    background-image: repeating-linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url("../Images/hamburguesa3.jpg");
 }
 
 img.TinyBurger
@@ -132,6 +153,19 @@ table.menubutton
 {
     margin-left:auto; 
     margin-right:auto;
+}
+
+table.Footer
+{
+    margin-left:auto; 
+    margin-right:auto;
+    text-align: center;
+}
+
+td.td_padding
+{
+    padding-top: 60px;
+    padding-bottom: 20px;
 }
 
 nav.head
@@ -166,6 +200,12 @@ img.Ibra
     display:inline;
 }
 
+img.Ibra2
+{
+    height:90%;
+    display:inline;
+}
+
 p.top
 {
     color: white;
@@ -193,4 +233,69 @@ p.White
 a.current
 {
    color: red;
+}
+
+form.contact
+{
+    display: inline-block;
+}
+
+input.field_sizes1
+{
+    height: 25px;
+    color: black;
+    margin-bottom: 20px;
+}
+
+p.Green
+{
+    color:rgb(53, 201, 53);
+    text-decoration: underline;
+}
+
+p.White
+{
+    color:white;
+}
+
+i.white
+{
+    color:white;
+    padding-right: 15px;
+}
+
+::-webkit-input-placeholder
+{
+    font-style: italic;
+}
+
+:-moz-placeholder
+{
+    font-style: italic;  
+}
+::-moz-placeholder 
+{
+    font-style: italic;  
+}
+:-ms-input-placeholder 
+{  
+    font-style: italic; 
+}
+
+::-webkit-textarea-placeholder
+{
+    font-style: italic;
+}
+
+:-moz-placeholder
+{
+    font-style: italic;  
+}
+::-moz-placeholder 
+{
+    font-style: italic;  
+}
+:-ms-textarea-placeholder 
+{  
+    font-style: italic; 
 }
