--- a/Resources/CSS/index.css
+++ b/Resources/CSS/index.css
@@ -214,8 +214,9 @@ div.HeaderDiv
     min-height: 100vh;
     width: 100%; 
     background-repeat: no-repeat;
-    background-size: 1550px 1050px; 
+    background-size: 1550px 1000px; 
     background-image: repeating-linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url("../Images/hamburguesa2.jpg");
+    padding-bottom: 50px;
 }
 
 div.Footer
@@ -331,6 +332,15 @@ img.TinyBurger
     max-width: 2%;
 }
 
+img.TinyBurger2
+{
+    padding-top: 75px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 25%;
+}
+
 img.SecondMenu
 {
     max-width: 15%;
@@ -365,9 +375,11 @@ div.BottomTriangle
     background-size: 25px 10px;
     background-repeat: repeat-x;
     position: relative;
-    top: 200px;
+    top: 206px;
     left: -10px;
-    overflow: hidden;    
+    overflow: hidden;  
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
 div.BottomTriangle2
@@ -513,3 +525,88 @@ i.white
     color:white;
     padding-right: 15px;
 }
+
+form.contact
+{
+    display: inline-block;
+}
+
+input.field_sizes1
+{
+    height: 25px;
+    color: black;
+    margin-bottom: 20px;
+}
+
+.container {
+    padding: 16px;
+  }
+
+.modal
+{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+/* Center the image and position the close button */
+.imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+    position: relative;
+  }
+
+.modalDialog {
+	position: fixed;
+	font-family: Arial, Helvetica, sans-serif;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background: rgba(0,0,0,0.8);
+	z-index: 99999;
+	opacity:0;
+	-webkit-transition: opacity 400ms ease-in;
+	-moz-transition: opacity 400ms ease-in;
+	transition: opacity 400ms ease-in;
+    pointer-events: none;
+}
+
+.modalDialog:target {
+	opacity:1;
+	pointer-events: auto;
+}
+
+.modalDialog > div {
+	width: 400px;
+	position: relative;
+	margin: 10% auto;
+	padding: 5px 20px 13px 20px;
+	border-radius: 10px;
+	background: #fff;
+	background: -moz-linear-gradient(#fff, #999);
+	background: -webkit-linear-gradient(#fff, #999);
+	background: -o-linear-gradient(#fff, #999);
+}
+
+.close {
+	background: #606061;
+	color: #FFFFFF;
+	line-height: 25px;
+	position: absolute;
+	right: -12px;
+	text-align: center;
+	top: -10px;
+	width: 24px;
+	text-decoration: none;
+	font-weight: bold;
+	-webkit-border-radius: 12px;
+	-moz-border-radius: 12px;
+	border-radius: 12px;
+	-moz-box-shadow: 1px 1px 3px #000;
+	-webkit-box-shadow: 1px 1px 3px #000;
+	box-shadow: 1px 1px 3px #000;
+}
+
+.close:hover { background: #00d9ff; }
